V6120: Corrections during CompList

--- a/Prevu.Synoptics.V6120_Novatex/Details/D286.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D286.xaml
@@ -10,60 +10,61 @@
              mc:Ignorable="d" 
              
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="327" Width="395">
-        <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="176" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Canvas Height="391" Width="440">
+        <Labels:Pipe Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="227" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="220" Canvas.Top="190" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="63" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="38" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="89" Canvas.Top="188" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="ByProduct" Width="39" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="310" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="271" Canvas.Top="252" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="62" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="216" Canvas.Top="122" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="72" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="216" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="140" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="ByProduct" Width="39" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="361" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="181" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="122" RenderTransformOrigin="0.5,0.5" StatusComponent="286-21-CV1" Canvas.Left="225" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="201" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="286-21-CV2" Canvas.Left="235" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="117" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve_001.RenderTransform>
+        <Labels:Pipe Color="Water" Width="42" StatusComponent="286-44-FT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="142" Canvas.Top="122" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="163" StatusComponent="286-44-FT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="21" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="286-44-FT1" Canvas.Left="123" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
+                    <RotateTransform Angle="90"/>
                 </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="117" Canvas.Top="79" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:V01_RTF_Microfilter Canvas.Left="125" Canvas.Top="132" Height="145" Width="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="308" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="188" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle Height="29" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="89" Canvas.Top="176" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="286-41-LT1" Canvas.Left="164" Canvas.Top="216" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Top="79" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="19"/>
-        <Labels:DeviceLabel ComponentName="286-01-MA1" Canvas.Left="285" Canvas.Top="117" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="19"/>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:V01_RTF_Microfilter Canvas.Left="176" Canvas.Top="194" Height="145" Width="168" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_CV_Valve Canvas.Left="176" Canvas.Top="74" Height="25" Width="46" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_CV_Valve Canvas.Left="176" Canvas.Top="112" Height="26" Width="46" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="30" Stroke="Black" Width="2" Canvas.Left="59" Canvas.Top="91" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="22" Stroke="Black" Width="2" Canvas.Left="21" Canvas.Top="76" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="52" Canvas.Top="78" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="359" Canvas.Top="270" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="239" Canvas.Top="367" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="29" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="140" Canvas.Top="238" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="286-41-LT1" Canvas.Left="215" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="154"/>
+        <Labels:DeviceLabel ComponentName="286-01-MA1" Canvas.Left="336" Canvas.Top="179" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Top="12" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="154"/>
+        <Labels:DeviceLabel ComponentName="286-44-FT1" Canvas.Left="18" Canvas.Top="115" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
