--- a/Prevu.Synoptics.V6120_Novatex/Pages/P140.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P140.xaml
@@ -22,15 +22,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="44" StatusComponent="184-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="102" Canvas.Top="80" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="522" Canvas.Top="255"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="46" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="83" Canvas.Top="62"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="167" StatusComponent="124-01-MA1" PipeHeight="Medium" Canvas.Left="83" Canvas.Top="62"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="294" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="804" Canvas.Top="562">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -82,7 +75,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="207" StatusComponent="134-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="598" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="74" StatusComponent="150-01-MA1" PipeHeight="Medium" Canvas.Left="1161" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="82" StatusComponent="124-01-MA1" PipeHeight="Medium" Canvas.Left="204" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="126" StatusComponent="124-01-MA1" PipeHeight="Medium" Canvas.Left="182" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -139,7 +132,6 @@
         <Machines:NT_ConveyorBelt Height="3" Width="172" RenderTransformOrigin="0.5,0.5" Canvas.Left="794" Canvas.Top="706" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="396" Canvas.Top="430" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="154" RenderTransformOrigin="0.5,0.5" Canvas.Left="1020" Canvas.Top="503" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="112" Canvas.Top="95" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="1267" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="1220" Canvas.Top="703" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="251" Canvas.Top="530" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -153,13 +145,12 @@
         <Labels:DeviceLabel ComponentName="132-01-MA1" Canvas.Left="792" Canvas.Top="484" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="134-01-MA1" Canvas.Left="794" Canvas.Top="643" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="142-01-MA1" Canvas.Left="396" Canvas.Top="371" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="124-01-MA1" Canvas.Left="166" Canvas.Top="35" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="158-01-MA1" Canvas.Left="1321" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="1274" Canvas.Top="643" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="144-01-MA1" Canvas.Left="251" Canvas.Top="473" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="146-01-MA1" Canvas.Left="305" Canvas.Top="709" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="150-01-MA1" Canvas.Left="1084" Canvas.Top="441" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="124-01-MA1" JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="15" Canvas.Top="32"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="126-01-MA1" JumpToLabel="124-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="15" Canvas.Top="32"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="158-01-MA1" JumpToLabel="160-01-MA1" Canvas.Left="1445" Canvas.Top="558"/>
         <Labels:JumpLabel JumpFromLabel="146-01-MA1" JumpToLabel="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="107" Canvas.Top="659" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="168-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="1393" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
