--- a/Prevu.Synoptics.V6120_Novatex/PlantView.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/PlantView.xaml
@@ -13,7 +13,7 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="1016" Width="1922" >
+    <Canvas Height="1155" Width="1922" >
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="53" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="340" Canvas.Top="95" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="54" Canvas.Top="186" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -50,8 +50,8 @@
         <Labels:DeviceLabel ComponentName="Q312" Canvas.Left="825" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="170" Canvas.Left="782" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1095" Canvas.Top="95" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="268" Canvas.Left="1236" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="212" Canvas.Left="1080" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="268" Canvas.Left="1102" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="212" Canvas.Left="990" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="Q40" Canvas.Left="1088" Canvas.Top="37" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S401" Canvas.Left="1090" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q40-POWER" Canvas.Left="1200" Canvas.Top="37" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -61,12 +61,12 @@
         <Labels:DeviceLabel ComponentName="Q402" Canvas.Left="1144" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:ElectricalCabinetBox Canvas.Left="1281" Canvas.Top="244" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q403" Canvas.Left="1257" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="288" Canvas.Left="1310" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="288" Canvas.Left="1328" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S400" Canvas.Left="977" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S403" Canvas.Left="1316" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S402" Canvas.Left="1203" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="087" Canvas.Left="1006" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:GroupLabel GroupName="229" Canvas.Left="1160" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="087" Canvas.Left="1328" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:GroupLabel GroupName="229" Canvas.Left="990" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1425" Canvas.Top="95" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="1418" Canvas.Top="37" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S410" Canvas.Left="1474" Canvas.Top="352" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -81,54 +81,55 @@
         <Machines:ElectricalCabinetBox Canvas.Left="1753" Canvas.Top="244" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q421" Canvas.Left="1729" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="240" Canvas.Left="1742" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="540" Canvas.Top="598" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="330" Canvas.Left="528" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="380" Canvas.Left="678" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q51" Canvas.Left="532" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S510" Canvas.Left="588" Canvas.Top="855" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q51-POWER" Canvas.Left="644" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="556" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q511" Canvas.Left="532" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="668" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q512" Canvas.Left="644" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="350" Canvas.Left="602" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="810" Canvas.Top="598" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="430" Canvas.Left="834" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="460" Canvas.Left="909" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q61" Canvas.Left="802" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S610" Canvas.Left="858" Canvas.Top="855" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q61-POWER" Canvas.Left="914" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="883" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q611" Canvas.Left="859" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1080" Canvas.Top="598" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="510" Canvas.Left="1068" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="557" Canvas.Left="1218" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q71" Canvas.Left="1072" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S710" Canvas.Left="1128" Canvas.Top="855" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="1184" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="1096" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q711" Canvas.Left="1072" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="1208" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q712" Canvas.Left="1184" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="530" Canvas.Left="1142" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1423" Canvas.Top="598" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="880" Canvas.Left="1411" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="950" Canvas.Left="1561" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q91" Canvas.Left="1417" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S911" Canvas.Left="1473" Canvas.Top="855" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q91-POWER" Canvas.Left="1529" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="1383" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q911" Canvas.Left="1359" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="1497" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q912" Canvas.Left="1473" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:ElectricalCabinetBox Canvas.Left="1609" Canvas.Top="747" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q913" Canvas.Left="1585" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="890" Canvas.Left="1485" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="810" Canvas.Left="1335" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="997" Canvas.Left="1635" Canvas.Top="919" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S910" Canvas.Left="1359" Canvas.Top="855" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S912" Canvas.Left="1585" Canvas.Top="854" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="540" Canvas.Top="673" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="330" Canvas.Left="528" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="380" Canvas.Left="678" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q51" Canvas.Left="532" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S510" Canvas.Left="588" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q51-POWER" Canvas.Left="644" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="556" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q511" Canvas.Left="532" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="668" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q512" Canvas.Left="644" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="350" Canvas.Left="602" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="810" Canvas.Top="673" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="430" Canvas.Left="834" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="460" Canvas.Left="909" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q61" Canvas.Left="802" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S610" Canvas.Left="858" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q61-POWER" Canvas.Left="914" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="883" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q611" Canvas.Left="859" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1080" Canvas.Top="673" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="510" Canvas.Left="1068" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="557" Canvas.Left="1218" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q71" Canvas.Left="1072" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S710" Canvas.Left="1128" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="1184" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="1096" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q711" Canvas.Left="1072" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="1208" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q712" Canvas.Left="1184" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="530" Canvas.Left="1142" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1423" Canvas.Top="673" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="880" Canvas.Left="1487" Canvas.Top="994" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="950" Canvas.Left="1598" Canvas.Top="994" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="Q91" Canvas.Left="1417" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S911" Canvas.Left="1473" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q91-POWER" Canvas.Left="1529" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="1383" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q911" Canvas.Left="1359" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="1497" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q912" Canvas.Left="1473" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:ElectricalCabinetBox Canvas.Left="1609" Canvas.Top="822" Height="77" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="Q913" Canvas.Left="1585" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="890" Canvas.Left="1487" Canvas.Top="1069" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="810" Canvas.Left="1372" Canvas.Top="994" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="997" Canvas.Left="1598" Canvas.Top="1069" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="S910" Canvas.Left="1359" Canvas.Top="930" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="S912" Canvas.Left="1585" Canvas.Top="929" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:ElectricalCabinetBox Canvas.Left="586" Canvas.Top="244" Height="77" Width="42" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q214" Canvas.Left="562" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="267" Canvas.Left="1218" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
