--- a/Prevu.Synoptics.V6120_Novatex/Details/D820.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D820.xaml
@@ -8,12 +8,14 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="540" Width="353">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="14" Canvas.Top="91" ComponentName="820-46-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
-        <Machines:V01_Radar Canvas.Left="65" Canvas.Top="64" Height="49" Width="35" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="820-41-LT1" SignalName="LSHA" Canvas.Left="43" Canvas.Top="172"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="820-01-MA1" Canvas.Left="126" Canvas.Top="115"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="820-46-WT1" Canvas.Left="214" Canvas.Top="270" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="820-41-LT1" Canvas.Left="105" Canvas.Top="25" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Canvas Height="467" Width="353">
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="14" Canvas.Top="27" Color="DryMaterial" ComponentName="820-46-WT1" TrendName="WEIGHT"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-46-WT1" SignalName="LSHA" Canvas.Left="43" Canvas.Top="81"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-01-MA1" Canvas.Left="126" Canvas.Top="11"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" ComponentName="820-46-WT1" Canvas.Left="222" Canvas.Top="190" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="820-41-LEV" Canvas.Left="222" Canvas.Top="124" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSH" Canvas.Left="43" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSL" Canvas.Left="43" Canvas.Top="224" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel ComponentName="820-41-LEV" SignalName="LSLA" Canvas.Left="113" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
