--- a/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P170.xaml
@@ -109,13 +109,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="144" StatusComponent="227-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1227" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilitySignal="ECS1">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="300" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="984" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="176-32-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -173,7 +166,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="81" StatusComponent="227-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1297" Canvas.Top="276" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="ECS1"/>
         <Labels:Pipe Width="320" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="998" Canvas.Top="208" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="166-32-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -409,7 +401,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="78" StatusComponent="226-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1390" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium"/>
+        <Labels:Pipe Width="78" StatusComponent="224-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1253" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Top" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="74" StatusComponent="158-01-MA1" PipeHeight="Medium" Canvas.Left="98" Canvas.Top="130"/>
         <Labels:Pipe Width="52" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="494" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Top" VisibilityComponent="166-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
@@ -422,7 +414,6 @@
         <Machines:V01_NT_Belt_wMetalDetector_Diverter Canvas.Left="307" Canvas.Top="522" Height="116" Width="246" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_NT_Belt_wMetalDetector_Diverter Canvas.Left="1132" Canvas.Top="567" Height="116" Width="246" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_NT_Belt_wDiverter Canvas.Left="859" Canvas.Top="268" HorizontalAlignment="Center" VerticalAlignment="Top" Width="246"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Top" Height="3" Width="169" RenderTransformOrigin="0.5,0.5" Canvas.Left="1247" Canvas.Top="416"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="707" Canvas.Top="590" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="908" Canvas.Top="747" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="166" RenderTransformOrigin="0.5,0.5" Canvas.Left="158" Canvas.Top="125" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -441,7 +432,6 @@
         <Labels:DetailsLabel ComponentName="175-32-SORT" DetailsPageName="D175_2" Canvas.Left="495" Canvas.Top="476" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="175-31-SORT" DetailsPageName="D175_1" Canvas.Left="412" Canvas.Top="476" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="195-SORT" DetailsPageName="D175" Canvas.Left="1237" Canvas.Top="521" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="226-01-MA1" Height="50" Width="90" Canvas.Left="1326" Canvas.Top="358"/>
         <Labels:DeviceLabel ComponentName="172-01-MA1" Canvas.Left="781" Canvas.Top="529" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="173-01-MA1" Canvas.Left="982" Canvas.Top="688" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="160-01-MA1" Height="50" Width="90" Canvas.Left="245" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -453,8 +443,7 @@
         <Labels:DeviceLabel ComponentName="177-01-MA1" Height="50" Width="90" Canvas.Left="909" Canvas.Top="299" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="170-01-MA1" JumpToLabel="168-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="34" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="160-01-MA1" JumpToLabel="158-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="24" Canvas.Top="101"/>
-        <Labels:JumpLabel JumpFromLabel="226-01-MA1" JumpToLabel="225-01-MA1" Canvas.Left="1362" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
-        <Labels:JumpLabel JumpFromLabel="226-01-MA1" JumpToLabel="228-01-MA1" Canvas.Left="1448" Canvas.Top="391" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="224-01-MA1" JumpToLabel="226-01-MA1" Canvas.Left="1311" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="195-01-MA1" JumpToLabel="146-01-MA1" Canvas.Left="1405" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
